@@ -45,6 +45,7 @@ use App::Info::Util;
 use vars qw(@ISA $VERSION);
 @ISA = qw(App::Info::RDBMS);
 $VERSION = '0.27';
+use constant WIN32 => $^O eq 'MSWin32';
 
 my $u = App::Info::Util->new;
 
@@ -71,9 +72,9 @@ directories:
 
 =over 4
 
-=item $ENV{POSTGRES_HOME}/bin
+=item $ENV{POSTGRES_HOME}/bin (if $ENV{POSTGRES_HOME} exists)
 
-=item $ENV{POSTGRES_LIB}/../bin
+=item $ENV{POSTGRES_LIB}/../bin (if $ENV{POSTGRES_HOME} exists)
 
 =item /usr/local/pgsql/bin
 
@@ -133,17 +134,20 @@ sub new {
     unshift @paths, "$ENV{POSTGRES_HOME}/bin" if exists $ENV{POSTGRES_HOME};
     unshift @paths, "$ENV{POSTGRES_LIB}/../bin" if exists $ENV{POSTGRES_LIB};
 
-    if (my $cfg = $u->first_cat_exe('pg_config', @paths)) {
+    my $exe = 'pg_config';
+    $exe .= '.exe' if WIN32;
+
+    if (my $cfg = $u->first_cat_exe($exe, @paths)) {
         # We found it. Confirm.
         $self->{pg_config} = $self->confirm( key      => 'pg_config',
-                                             prompt   => 'Path to pg_config?',
+                                             prompt   => "Path to $exe?",
                                              value    => $cfg,
                                              callback => sub { -x },
                                              error    => 'Not an executable');
     } else {
         # Handle an unknown value.
         $self->{pg_config} = $self->unknown( key      => 'pg_config',
-                                             prompt   => 'Path to pg_config?',
+                                             prompt   => "Path to $exe?",
                                              callback => sub { -x },
                                              error    => 'Not an executable');
     }
@@ -683,6 +687,50 @@ sub so_lib_dir {
     return $self->{so_lib_dir};
 }
 
+=head3 configure options
+
+  my $configure = $pg->configure;
+
+Returns the options with which the PostgreSQL server was
+configured. App::Info::RDBMS::PostgreSQL gathers the configure data from the
+system call C<`pg_config --configure`>.
+
+B<Events:>
+
+=over 4
+
+=item info
+
+Executing `pg_config --configure`
+
+=item error
+
+Cannot find configure information
+
+=item unknown
+
+Enter PostgreSQL configuration options
+
+=back
+
+=cut
+
+sub configure {
+    my $self = shift;
+    return unless $self->{pg_config};
+    unless (exists $self->{configure} ) {
+        if (my $conf = $get_data->($self, '--configure')) {
+            $self->{configure} = $conf;
+        } else {
+            # Configure can be empty, so just make sure it exists and is
+            # defined. Don't prompt.
+            $self->{configure} = '';
+        }
+    }
+
+    return $self->{configure};
+}
+
 ##############################################################################
 
 =head3 home_url
@@ -705,7 +753,7 @@ Returns the PostgreSQL download URL.
 
 =cut
 
-sub download_url { "http://www.ca.postgresql.org/sitess.html" }
+sub download_url { "http://www.postgresql.org/mirrors-ftp.html" }
 
 1;
 __END__
