@@ -1,23 +1,9 @@
 #!perl -w
 
-# $Id: zpod.t,v 1.1 2003/08/26 01:03:24 david Exp $
+# $Id$
 
-use Test::More;
-use File::Spec;
-use File::Find;
 use strict;
-
-eval "use Test::Pod 0.95";
-
-if ($@) {
-    plan skip_all => "Test::Pod v0.95 required for testing POD";
-} else {
-    Test::Pod->import;
-    my @files;
-    my $blib = File::Spec->catfile(qw(blib lib));
-    find( sub {push @files, $File::Find::name if /\.p(l|m|od)$/}, $blib);
-    plan tests => scalar @files;
-    foreach my $file (@files) {
-        pod_file_ok($file);
-    }
-}
+use Test::More;
+eval "use Test::Pod 1.20";
+plan skip_all => "Test::Pod 1.20 required for testing POD" if $@;
+all_pod_files_ok(all_pod_files('lib'));
