@@ -5,6 +5,8 @@ Revision history for Perl extension App::Info.
         Apache and PostgreSQL libraries so that they work properly when
         there are spaces in the path (such as on Windows). Reported by
         Geoff Richards.
+      - Added "configure()" method to the PostgreSQL library. From the
+        DBD::Pg project.
 
 0.26  2004-11-03T17:53:58
       - Added new path to list of paths to search for PostgreSQL. The new
